# cine-cli

./: .buildinfo  .gitignore  CNAME  README.md  api.html  disclaimer.md  genindex.html  index.html  install.sh  media.html  objects.inv  package-lock.json  package.json  players.html  pyproject.toml  ruff.toml  search.html  searchindex.js  torrent_stream_server.py  utils.html  utils.scraper.html  utils.subtitles.html
.doctrees/: api.doctree  environment.pickle  index.doctree  media.doctree  players.doctree  utils.doctree  utils.scraper.doctree  utils.subtitles.doctree
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows.bak/: ruff.yml
cine_cli/: __init__.py  cache.py  config.py  config.template.toml  download.py  errors.py  http_client.py  logger.py  plugins.py  scraper.py
cine_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cine_cli/cli/: __main__.py  configuration.py  episode.py  main_loop.py  play.py  scraper.py  search.py  ui.py
cine_cli/dev_cli/: __main__.py  preview.py
cine_cli/iterfzf/: __init__.py
cine_cli/media/: media.py
cine_cli/players/: __init__.py  browser.py  custom_player.py  mpv.py  player.py  vlc.py
cine_cli/resolvers/: __init__.py  encdec.py  torrent.py  torrentio.py  videasy.py
cine_cli/scrapers/: tmdb.py  torrentio.py
cine_cli/utils/: ip.py  paths.py  platform.py  version.py
cine_cli/utils/scraper/: __init__.py
docs/: conf.py
examples/: custom_cli.py
examples/youtube-api/: README.md
mov_cli/: __init__.py
mov_cli/cli/: __main__.py
mov_cli/dev_cli/: preview.py
public/: app.js  index.html  styles.css
scripts/: test_cli.py
src/: cli.js  play.js  providers.js  scraper.js  tmdb.js
src/torrent/: index.js  server.mjs
src/ui/: banner.js  prompts.js  spinner.js  theme.js
torrent-web/: package-lock.json  package.json  server.js
torrent-web/public/: index.html
(+3 files in other folders)
