[project]
name = "cine-cli"
description = "Watch everything from your terminal."
authors = [
    {name = "Pain", email = "painedposeidon444@gmail.com"},
    {name = "Ananas", email = "ananas@ananas.moe"},
    {name = "Goldy", email = "goldy@devgoldy.xyz"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = [
    "movie-cli", "cine_cli"
]
classifiers = [
	'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "httpx",
    "importlib-metadata; python_version<'3.8'",
    "toml",
    "devgoldyutils>=3.0.0",
    "typer>=0.12.2",
    "inquirer",
    "beautifulsoup4",
    "Unidecode",
    "deprecation",
    "packaging",
    "thefuzz",
    "python-decouple",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build",
    "Sphinx",
    "sphinxext-opengraph",
    "sphinx-inline-tabs",
    "furo",
    "myst-parser",
    "sphinx-copybutton"
]

[project.urls]
GitHub = "https://github.com/cine-cli/cine-cli"
BugTracker = "https://github.com/cine-cli/cine-cli/issues"

[tool.setuptools.dynamic]
version = { attr = "cine_cli.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cine_cli*"]

[tool.setuptools.package-data]
"cine_cli" = ["config.template.toml", "cli/random_tips.json", "utils/subtitles/iso_639.json"]

[project.scripts]
cine-cli = "cine_cli.cli.__main__:app"
cine-cli-dev = "cine_cli.dev_cli.__main__:app"